--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Interview Practices</title>
+<title>Page Title</title>
 <style>
-strong {
-background-color:lightblue;
-border-radius:5px;}
+
 button {
 background-color:lightblue;
 }
 
+.task-desc{
+font-style: italic;
+background-color:lightblue;
+border-radius:5px;}
+
 </style>
 </head>
 <body>
+<h2>Task 1</h2>
+<p class="task-desc">Finding the n-th Fibonacci number (Fibonacci sequence calculator)</p>
+<p>Enter the <em>n</em> to calculate <em>F(n)</em>:</p>
+<input id="fib-input"><button id="fib-button">Submit</button>
+
+<h2>Task 2</h2>
+<p class="task-desc">Algorithm that checks if in the random array there is any pair of 2 numbers that sum up to given sum (Google Interview)</p>
+
 <p>Fill in the sum of 2 integers you are searching for in unordered random array.<br><br> arrayLength = <strong>15</strong> <br> scope = <strong>0-10</strong></p>
 <input id="input"> 
 <button id="button">Submit</button>
@@ -23,18 +34,22 @@ background-color:lightblue;
 <div id="random"> </div>
 
 <script>
+//////////////////////////////////////////////
+////////// TASK 1 below this line ////////////
+//////////////////////////////////////////////
+
+
+
+
+//////////////////////////////////////////////
+////////// TASK 2 below this line ////////////
+//////////////////////////////////////////////
 let array = [];
 let arrayLength=15;
-
-
-
-
 let findSum = function () {
 let sum = document.getElementById("input").value;
-
 if(isNaN(sum) || sum=="") {alert("Invalid or empty input")}
 else {
-
 array = [];
 for(let i=0;i<arrayLength;i++) {
 var number = Math.floor(Math.random() * 10);
@@ -46,8 +61,10 @@ document.getElementById("random").innerHTML="Random array= ["+array+"]";
 
 
 
+
 }
 }
+
 
 let button = document.getElementById("button");
 button.addEventListener("click", findSum);
