--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ border-radius:5px;}
 <hr>
 <br>
 <h2>Task 2</h2>
-<p class="task-desc">Algorithm that checks if in the random array there is any pair of 2 numbers that sum up to given sum (Google Interview)</p>
+<p class="task-desc">Algorithm that checks if in the random array there is any pair of 2 numbers that sum up to given sum</p>
 
 <p>Fill in the sum of 2 integers you are searching for in unordered random array.<br><br> arrayLength = <strong>15</strong> <br> scope = <strong>0-10</strong></p>
 <input id="input"> 
