--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Interview Practice</title>
 <style>
-
+.wwwarning{
+color:red;
+border: solid 2px black;
+padding:20px;}
 button {
 background-color:lightblue;
 }
@@ -20,6 +23,7 @@ border-radius:5px;}
 </style>
 </head>
 <body>
+<p class="wwwarning">This page is incredibly ugly and I'm aware of that. It focuses on algorithms, data structure and react.js issues, contains some found coding interview tasks. </p>
 <h2>Task 1</h2>
 <p class="task-desc">Finding the n-th Fibonacci number (Fibonacci sequence calculator)</p>
 
@@ -177,6 +181,7 @@ ReactDOM.render(<App />, document.getElementById("appreact"));
   </script>
 </body>
 </html>
+
 
 
 
