--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ border-radius:5px;}
 <h2>Task 1</h2>
 <p class="task-desc">Finding the n-th Fibonacci number (Fibonacci sequence calculator)</p>
 
-<p>Following the <a href="https://en.wikipedia.org/wiki/Fibonacci_number" target="_blank">Wikipedia definition</a>: In mathematics, the Fibonacci numbers, commonly denoted F<sub>n</sub> form a sequence, called the Fibonacci sequence, such that each number is the sum of the two preceding ones, starting from 0 and 1. That is:<br><br><em>F<sub>0</sub>=0, F<sub>1</sub>=1,</em><br><br>and<br><br><em>F<sub>n</sub>=F<sub>n-1</sub>+F<sub>n-2</sub></em></p>
+<p>Following the <a href="https://en.wikipedia.org/wiki/Fibonacci_number" target="_blank">Wikipedia definition</a>: the Fibonacci numbers, commonly denoted F<sub>n</sub> form a sequence, called the Fibonacci sequence, such that each number is the sum of the two preceding ones, starting from 0 and 1. That is:<br><br><em>F<sub>0</sub>=0, F<sub>1</sub>=1,</em><br><br>and<br><br><em>F<sub>n</sub>=F<sub>n-1</sub>+F<sub>n-2</sub></em></p>
 
 
 <p>------------------</p>
