--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ border-radius:5px;}
 </style>
 </head>
 <body>
-<p class="wwwarning">This page is extremely ugly and I'm aware of that. It focuses on algorithms, data structure and react.js issues, contains some found coding interview tasks. </p>
+<p class="wwwarning">This page is extremely ugly but it is not the point. It focuses on algorithms, data structure and react.js issues, contains some found coding interview tasks. </p>
 <h2>Task 1</h2>
 <p class="task-desc">Finding the n-th Fibonacci number (Fibonacci sequence calculator)</p>
 
