--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ border-radius:5px;}
 <hr>
 <br>
 <h2>Task 3</h2>
-<p class="task-desc">Algorithm that checks if in the random array there is any pair of 2 numbers that sum up to given sum</p>
+<p class="task-desc">Algorithm that checks if in the random array there is any pair of 2 numbers that sum up to given sum (<a href="https://www.youtube.com/watch?v=XKu_SEDAykw" target="_blank">Example Coding/Engineering Interview at Google</a>)</p>
 
 <p>Fill in the sum of 2 integers you are searching for in unordered random array.<br><br> Random array length = <strong>15</strong> <br> Range of random numbers is between <strong>0 and 10</strong></p>
 <input id="input" value=16> 
