--- a/index.html
+++ b/index.html
@@ -1,199 +1,160 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<script src="https://unpkg.com/react/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/babel-standalone/babel.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Interview Practice</title>
-<style>
-.wwwarning{
-color:red;
-border: solid 2px black;
-padding:20px;}
-button {
-background-color:lightblue;
-}
-
-.task-desc{
-font-style: italic;
-background-color:lightblue;
-border-radius:5px;}
-
-</style>
+    <script src="https://unpkg.com/react/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone/babel.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Interview Practice</title>
+    <style>
+        .wwwarning {
+            color: red;
+            border: solid 2px black;
+            padding: 20px;
+        }
+        
+        button {
+            background-color: lightblue;
+        }
+        
+        .task-desc {
+            font-style: italic;
+            background-color: lightblue;
+            border-radius: 5px;
+        }
+    </style>
 </head>
+
 <body>
-<p class="wwwarning">This page is extremely ugly but it is not the point. It focuses on algorithms, data structure and react.js issues, contains some found coding interview tasks. </p>
-<h2>Task 1</h2>
-<p class="task-desc">Finding the n-th Fibonacci number (Fibonacci sequence calculator)</p>
+    <p class="wwwarning">This page is extremely ugly but it is not the point. It focuses on algorithms, data structure and react.js issues, contains some found coding interview tasks. </p>
+    <h2>Task 1</h2>
+    <p class="task-desc">Finding the n-th Fibonacci number (Fibonacci sequence calculator)</p>
 
-<p>Following the <a href="https://en.wikipedia.org/wiki/Fibonacci_number" target="_blank">Wikipedia definition</a>: the Fibonacci numbers, commonly denoted F<sub>n</sub> form a sequence, called the Fibonacci sequence, such that each number is the sum of the two preceding ones, starting from 0 and 1. That is:<br><br><em>F<sub>0</sub>=0, F<sub>1</sub>=1,</em><br><br>and<br><br><em>F<sub>n</sub>=F<sub>n-1</sub>+F<sub>n-2</sub></em></p>
+    <p>Following the <a href="https://en.wikipedia.org/wiki/Fibonacci_number" target="_blank">Wikipedia definition</a>: the Fibonacci numbers, commonly denoted F<sub>n</sub> form a sequence, called the Fibonacci sequence, such that each number is the sum of the two preceding ones, starting from 0 and 1. That is:
+        <br>
+        <br><em>F<sub>0</sub>=0, F<sub>1</sub>=1,</em>
+        <br>
+        <br>and
+        <br>
+        <br><em>F<sub>n</sub>=F<sub>n-1</sub>+F<sub>n-2</sub></em></p>
 
+    <p>------------------</p>
+    <p>Enter the <em>n</em> to calculate <em>F<sub>n</sub></em>:</p>
+    <input id="fib-input">
+    <button id="fib-button">Submit</button>
+    <div id="fib-result"></div>
+    <br>
+    <hr>
+    <br>
+    <h2>Task 2</h2>
+    <p class="task-desc">Algorithm that checks if in the random array there is any pair of 2 numbers that sum up to given sum (<a href="https://www.youtube.com/watch?v=XKu_SEDAykw" target="_blank">Example Coding/Engineering Interview at Google</a>)</p>
 
-<p>------------------</p>
-<p>Enter the <em>n</em> to calculate <em>F<sub>n</sub></em>:</p>
-<input id="fib-input"><button id="fib-button">Submit</button>
-<div id="fib-result"></div>
-<br>
-<hr>
-<br>
-  <h2>Task 2</h2>
-<p class="task-desc">Algorithm that checks if in the random array there is any pair of 2 numbers that sum up to given sum (<a href="https://www.youtube.com/watch?v=XKu_SEDAykw" target="_blank">Example Coding/Engineering Interview at Google</a>)</p>
+    <p>Fill in the sum you want to search for in unordered random array (the sum of 2 integers).
+        <br>
+        <br> Array length = <strong>15</strong>
+        <br> Range of random numbers is between <strong>0 and 10</strong></p>
+    <input id="input" value=16>
+    <button id="button">Submit</button>
+    <br>
 
-<p>Fill in the sum you want to search for in unordered random array (the sum of 2 integers).<br><br> Array length = <strong>15</strong> <br> Range of random numbers is between <strong>0 and 10</strong></p>
-<input id="input" value=16> 
-<button id="button">Submit</button>
-<br>
+    <div id="random"> </div>
+    <div id="arrsearchresult"></div>
 
+    <br>
+    <hr>
+    <br>
+    <h2>Task 3</h2>
+    <p class="task-desc">Simple React.js component with local state that display values from input</p>
 
+    <div id="appreact"></div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <script>
+        //////////////////////////////////////////////
+        ////////// TASK 1 below this line ////////////
+        //////////////////////////////////////////////
 
-<div id="random"> </div>
-<div id="arrsearchresult"></div>
-  
+        let calcFibonacci = function() {
+            document.getElementById("fib-result").innerHTML = "";
+            let noff = document.getElementById("fib-input").value;
+            noff = noff.trim();
 
-<br>
-<hr>
-<br>
-<h2>Task 3</h2>
-<p class="task-desc">Simple React.js component with local state that display values from input</p>
+            if (isNaN(noff) || noff == "" || noff < 0) {
+                alert("Invalid or empty input");
+            } else {
+                let aFib = 0;
+                let bFib = 1;
+                let Fsum = 0;
+                for (var fi = 0; fi <= noff - 1; fi++) {
+                    Fsum = aFib + bFib;
+                    aFib = bFib;
+                    bFib = Fsum;
+                }
 
-<div id="appreact"></div>
-  <br>
-  <br>
- <br>
-  <br>
-<script>
-//////////////////////////////////////////////
-////////// TASK 1 below this line ////////////
-//////////////////////////////////////////////
+                document.getElementById("fib-result").innerHTML = "F<sub>" + noff + "</sub> is: " + aFib + ".";
+            }
 
-let calcFibonacci = function() {
-document.getElementById("fib-result").innerHTML="";
-let noff = document.getElementById("fib-input").value;
-noff=noff.trim();
+        }
 
-if(isNaN(noff) || noff=="" || noff<0) {alert("Invalid or empty input");}
+        let fibbutton = document.getElementById("fib-button");
+        fibbutton.addEventListener("click", calcFibonacci);
+        //////////////////////////////////////////////
+        ////////// TASK 3 below this line ////////////
+        //////////////////////////////////////////////
+        let array = [];
+        let arrayLength = 15;
+        let findSum = function() {
+            let sum = document.getElementById("input").value;
+            if (isNaN(sum) || sum == "") {
+                alert("Invalid or empty input")
+            } else {
+                document.getElementById("arrsearchresult").innerHTML = "";
+                array = [];
+                for (var i = 0; i < arrayLength; i++) {
+                    var number = Math.floor(Math.random() * 10);
+                    array.push(number);
+                }
+                document.getElementById("random").innerHTML = "Random array = [" + array + "]";
 
+                let arrayComp = [];
+                for (var i = 0; i < array.length; i++) {
+                    var comp = sum - array[i];
+                    if (arrayComp.includes(array[i])) {
+                        document.getElementById("arrsearchresult").innerHTML = "<strong>Result</strong>: The array contains two numbers that sum up to given inputed value (" + sum + "). The pair that meets this condition (first found but maybe not the only one) is: " + comp + " and " + array[i] + ".";
+                        return true;
+                    } else {
+                        arrayComp.push(comp);
+                    }
+                }
+                document.getElementById("arrsearchresult").innerHTML = "<strong>Result</strong>: The array does not contain two numbers that sum up to given inputed value(" + sum + ").";
+            }
+        }
+        let button = document.getElementById("button");
+        button.addEventListener("click", findSum);
+    </script>
 
+    <script type="text/babel">
 
-else {
-let aFib=0;
-let bFib=1;
-let Fsum=0;
-for(var fi=0; fi<=noff-1; fi++) {
-Fsum=aFib+bFib;
-aFib=bFib;
-bFib=Fsum;
-}
+        class App extends React.Component { constructor() { super(); this.state = { name: "", lastname: "", displayedName: "", displayedLastname: "" }; } render() { return (
+        <div>
+            <p>Fill in your name:</p>
+            <input id="name" value={this.state.name} onChange={this.handleNameChange.bind(this)} />
+            <input id="lastname" value={this.state.lastname} onChange={this.handleLastnameChange.bind(this)} />
+            <button onClick={this.handleAddBtnClick.bind(this)}>
+                Submit
+            </button>
+            <br />
+            <br />
+            <output>
+                Your name & last name: {this.state.displayedName} {this.state.displayedLastname}
+            </output>
+        </div>
+        ); } handleNameChange({ target: { value } }) { this.setState({ name: value }) } handleLastnameChange({ target: { value } }) { this.setState({ lastname: value }) } handleAddBtnClick(){ this.setState({ displayedName: this.state.name, displayedLastname: this.state.lastname }) } } ReactDOM.render(
+        <App />, document.getElementById("appreact"));
 
-document.getElementById("fib-result").innerHTML="F<sub>"+noff+"</sub> is: "+aFib+".";
-}
-
-
-
-
-
-
-
-
-
-
-}
-
-let fibbutton = document.getElementById("fib-button");
-fibbutton.addEventListener("click", calcFibonacci);
-//////////////////////////////////////////////
-////////// TASK 3 below this line ////////////
-//////////////////////////////////////////////
-let array = [];
-let arrayLength=15;
-let findSum = function () {
-let sum = document.getElementById("input").value;
-if(isNaN(sum) || sum=="") {alert("Invalid or empty input")}
-else {
-document.getElementById("arrsearchresult").innerHTML="";
-array = [];
-for(var i=0;i<arrayLength;i++) {
-var number = Math.floor(Math.random() * 10);
-array.push(number);
-}
-document.getElementById("random").innerHTML="Random array = ["+array+"]";
-
-let arrayComp=[];
-for (var i=0;i<array.length;i++) {
-var comp = sum - array[i];
-if(arrayComp.includes(array[i])) {
-document.getElementById("arrsearchresult").innerHTML="<strong>Result</strong>: The array contains two numbers that sum up to given inputed value ("+sum+"). The pair that meets this condition (first found but maybe not the only one) is: "+comp+" and "+array[i]+".";
-return true;
-}
-else {
-arrayComp.push(comp);
-}
-}
-document.getElementById("arrsearchresult").innerHTML="<strong>Result</strong>: The array does not contain two numbers that sum up to given inputed value("+sum+").";
-}
-}
-let button = document.getElementById("button");
-button.addEventListener("click", findSum);
-
-</script>
-
-<script type="text/babel">
- 
-class App extends React.Component {
-              constructor() {
-    super();
-    this.state = {
-      name: "",
-      lastname: "",
-      displayedName: "",
-      displayedLastname: ""
-    };
-  }
-  render() {
-              return (
-      <div>
-      <p>Fill in your name:</p>
-        <input
-          id="name"
-          value={this.state.name}
-          onChange={this.handleNameChange.bind(this)}
-        />
-        <input
-          id="lastname"
-          value={this.state.lastname}
-          onChange={this.handleLastnameChange.bind(this)}
-       />
-        <button onClick={this.handleAddBtnClick.bind(this)}>
-            Submit
-        </button>
-        <br />
-        <br />
-        <output>
-           Your name & last name: {this.state.displayedName} {this.state.displayedLastname}
-        </output>
-     </div>
-  );
-}
-handleNameChange({ target: { value } }) {
-  this.setState({ name: value })
-}
-handleLastnameChange({ target: { value } }) {
-  this.setState({ lastname: value })
-}
-handleAddBtnClick(){
-              this.setState({
-              displayedName: this.state.name,
-    displayedLastname: this.state.lastname
-  })
-}
-}
-ReactDOM.render(<App />, document.getElementById("appreact"));
-
-  </script>
+    </script>
 </body>
 </html>
-
-
-
-
