--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <br>
     <h2>Task 3</h2>
     <p class="task-desc">Binary search algorithm: Binary search in random sorted array</p>
-    <p>Enter the value you want to binary search in the array, which will be selected at random, then sorted, then printed below after clicking. Take into account <strong>the range of random elements: between 1 and 14.</strong></p>
+    <p>Enter the value you want to binary search in the array, which will be selected at random, then sorted, then printed below after clicking.<br> Take into account <strong>the range of random elements: between 1 and 14.</strong></p>
 <input type="number" id="bin-input"><button id="bin-butt">Start binary search algorithm</button>
 <div id= "binary-random-array"></div>
 <div id="binresult"></div>
