--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <p class="wwwarning">This page is extremely ugly but it is not the point. It focuses on algorithms, data structure and react.js issues, contains some found coding interview tasks. </p>
+    <p class="wwwarning">This page is extremely ugly but it is not the point. It focuses on algorithms, data structure and react.js issues, contains some found coding interview tasks (e.g. from the book "Cracking the Coding Interview"). </p>
     <h2>Task 1</h2>
     <p class="task-desc">Finding the n-th Fibonacci number (Fibonacci sequence calculator)</p>
 
