--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ let biniauxA = binrandomarray.length;
 
 while (biniauxA >= 1) {
 if(bininput==binrandomarray[bini]){
-document.getElementById("binresult").innerHTML="<strong>Result:</strong>The array index of founded element is "+bini +".";
+document.getElementById("binresult").innerHTML="<strong>Result:</strong>The array index of found element is "+bini +".";
 return true;}
 else if (bininput<binrandomarray[bini]) {
 
