--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <br>
     <h2>Task 5</h2>
 	<p class="task-desc">Calculate hour and minute hands angle in the analog clock ("Cracking the Coding Interview")</p>
-	<div>Enter the time to estimate the angle between the hour and minutes hands. Take into account that the hour hand depends on minute hand<br>Enter the time:<br></div>
+	<div>Enter the time to estimate the angle between the hour and minutes hands. Take into account that the hour hand depends on minute hand.<br></div>
 <input size="5" id="inp-hour" placeholder="HH"><span>:</span> <input size="5" id="inp-minute" placeholder="MM">
 <button id="time-estim-butt">Calculate the angle</button>
 <div id="tim-result"></div>
