--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <hr>
     <br>
     <h2>Task 4</h2>
-    <p class="task-desc">Simple React.js component with local state that display values from input</p>
+    <p class="task-desc">Simple React.js component with local state that displays values from input</p>
 
     <div id="appreact"></div>
 	<br>
