--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ else {binaryNumberArray.unshift(0);
 decOper=(decOper)/2;
 }
 
-document.getElementById("dec-to-bin").innerHTML="Binary number of the inputed decimal value is "+binaryNumberArray.join("");
+document.getElementById("dec-to-bin").innerHTML="Binary form of the inputed decimal number is "+binaryNumberArray.join("");
 }}}
 
 document.getElementById("dec-to-bin-butt").addEventListener("click", decimalToBinary);
